Fix checkbox styling in signup.html. Fix various missing borders and backgrounds

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -175,9 +175,9 @@ a {
     color: var(--primary-color);
 }
 
-#faq .accordion-body {
+/* #faq .accordion-body {
     background-color: var(--white-color);
-}
+} */
 
 .frost-btn-dark {
     background: rgba(0, 0, 0, 0.45);
@@ -319,4 +319,19 @@ footer a {
 /* Custom icon styling */
 .text-highlight {
     color: var(--highlight-color) !important;
+}
+
+/* Custom checkbox styling */
+.form-check-input:checked {
+    background-color: var(--highlight-color);
+    border-color: var(--highlight-color);
+}
+
+.form-check-input:focus {
+    border-color: var(--highlight-color);
+    box-shadow: 0 0 0 0.25rem rgba(160, 201, 192, 0.25);
+}
+
+.form-check-input:checked:focus {
+    box-shadow: 0 0 0 0.25rem rgba(160, 201, 192, 0.25);
 }
